@startuml PISPOTPValidateModel
skinparam linetype polyline

title PISPOTPValidateModel

[*] --> outboundServer: ""PATCH /consentRequests/{ID}/validate""
outboundServer --> start: creation of state machine
start --> OTPIsValid:\ncall ""PATCH /consentRequests/{ID}/""\nreceived ""POST /CONSENTS""
start --> errored:\ncall ""PATCH /consentRequests/{ID}/""\nreceived ""PUT /consentRequests/{ID}/error""

@enduml
